--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="container mb-4">
+<footer class="container mb-4" [ngClass]="authService.getUserRoleForStyles() + '-main-font-color'">
     <hr class="border border-1 opacity-100">
     <div class="d-flex justify-content-md-between">
         <p>Aviso Legal</p>
