--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,11 @@
-<div *ngIf="!booleanPaint">
-  <div class="bg-color_basic min-vh-100 d-flex flex-column">
-    <div class="container d-flex flex-column flex-grow-1">
-      <app-nav-bar class="mt-4"></app-nav-bar>
-      <div>
-        <router-outlet class="flex-grow-1"></router-outlet>
-      </div>
+
+<div class="min-vh-100 d-flex flex-column" [ngClass]="[authService.getUserRoleForStyles() + '-background', authService.getUserRoleForStyles() + '-main-font-color']"
+>
+  <div class="container d-flex flex-column flex-grow-1">
+    <app-nav-bar class="mt-4 background-test"></app-nav-bar>
+    <div>
+      <router-outlet class="flex-grow-1"></router-outlet>
     </div>
-    <app-footer class="mt-auto"></app-footer>
   </div>
-</div>
-<div *ngIf="booleanPaint">
-  <div class="bg-color_teacher min-vh-100 d-flex flex-column">
-    <div class="container d-flex flex-column flex-grow-1">
-      <app-nav-bar class="mt-4"></app-nav-bar>
-      <div>
-        <router-outlet class="flex-grow-1"></router-outlet>
-      </div>
-    </div>
-    <app-footer class="mt-auto"></app-footer>
-  </div>
+  <app-footer class="mt-auto"></app-footer>
 </div>
