--- a/src/app/modules/users/components/form-login/form-login.component.html
+++ b/src/app/modules/users/components/form-login/form-login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="mt-5" *ngIf="!errorAlert">
+<form [formGroup]="formLogin" (ngSubmit)="onSubmit()" class="mt-5" *ngIf="!errorAlert" [ngClass]="authService.getUserRoleForStyles() + '-main-font-color'">
     <div class="mb-3">
         <label class="form-label">Email</label>
         <input type="text" class="form-control w-50" formControlName="email">
