--- a/src/app/modules/users/components/form-register-teacher/form-register-teacher.component.html
+++ b/src/app/modules/users/components/form-register-teacher/form-register-teacher.component.html
@@ -42,7 +42,7 @@
       class="form-control"
       type="text"
       id="price_hour"
-      placeholder="10.50"
+      placeholder="Precio por una clase"
       formControlName="price_hour"
       required
     />
