--- a/src/app/modules/users/components/form-register-location/form-register-location.component.css
+++ b/src/app/modules/users/components/form-register-location/form-register-location.component.css
@@ -1,3 +1,9 @@
+input.ng-invalid.ng-touched{
+    border-bottom: 3px solid tomato;
+}
+input.ng-valid.ng-touched {
+    border-bottom: 3px solid lightgreen
+}
 .error {
     color: tomato;
     font-size: 12px;
