--- a/src/app/modules/users/components/form-register-teacher/form-register-teacher.component.css
+++ b/src/app/modules/users/components/form-register-teacher/form-register-teacher.component.css
@@ -7,3 +7,15 @@
     color: tomato;
     font-size: 12px;
 }
+input.ng-invalid.ng-touched {
+    border-bottom: 3px solid tomato;
+}
+textarea.ng-invalid.ng-touched {
+    border-bottom: 3px solid tomato;
+}
+input.ng-valid.ng-touched {
+    border-bottom: 3px solid lightgreen
+}
+textarea.ng-valid.ng-touched {
+    border-bottom: 3px solid lightgreen
+}
