--- a/src/app/modules/users/components/form-register-user/form-register-user.component.css
+++ b/src/app/modules/users/components/form-register-user/form-register-user.component.css
@@ -2,3 +2,9 @@
     color: tomato;
     font-size: 12px;
 }
+input.ng-invalid.ng-touched {
+    border-bottom: 3px solid tomato;
+}
+input.ng-valid.ng-touched {
+    border-bottom: 3px solid lightgreen
+}
