--- a/src/app/modules/teachers/components/search-engine/search-engine.component.html
+++ b/src/app/modules/teachers/components/search-engine/search-engine.component.html
@@ -1,26 +1,32 @@
 <section class="container mt-3">
   <h2>! Encuentra a tu profe ideal !</h2>
-  <div class="my-2">
-    <select
-      name="department_id"
-      id="department_id"
-      formControlName="department_id"
-    >
-      <option value="0">Filtra por materia</option>
-      <option
-        *ngFor="let department of departments; trackBy: trackByDepartmentId"
-        [value]="department.id"
-        (click)="filtrar('department', department.id)"
+  <form [formGroup]="filterForm">
+    <div class="my-2">
+      <select
+        name="selectedDepartment"
+        id="selectedDepartment"
+        formControlName="selectedDepartment"
+        (change)="aplicarFiltro()"
       >
-        {{ department.department_name }}
-      </option>
-    </select>
-  </div>
+        <option value="">Filtrar por materia</option>
+        <option
+          *ngFor="let department of departments; trackBy: trackByDepartmentId"
+          [value]="department.department_name"
+        >
+          {{ department.department_name }}
+        </option>
+      </select>
+    </div>
+  </form>
   <div class="row g-3">
-    <article class="col-12 col-md-6 col-lg-4" *ngFor="let teach of myTeachers">
+    <article
+      class="col-12 col-md-6 col-lg-4"
+      *ngFor="let teach of showMyteachers"
+    >
       <app-teacher-card
         [teacher]="teach"
         [showButtonProfile]="true"
+        [showRating]="false"
       ></app-teacher-card>
     </article>
   </div>
