--- a/src/app/modules/student/components/student-profile/student-profile.component.html
+++ b/src/app/modules/student/components/student-profile/student-profile.component.html
@@ -57,7 +57,7 @@
     <h2 class="text-center text-white">El alumno aún no ha escrito ningún comentario </h2>
 </div>
 <!-- ME falta por agregar un condiocional mas para que el teacher responda al comentario -->
-<div *ngIf="ratingBool">
+<div *ngIf="ratingBool && teacherComment">
     <h2 class="text-center blue-text mt-5 mb-4">Lo que el alumno a comentado sobre {{ teacher?.name }} </h2>
     <div class="container">
         <div class="row">
@@ -88,4 +88,47 @@
             </div>
         </div>
     </div>
+</div>
+
+<div *ngIf="ratingBool && !teacherComment">
+    <section>
+        <div id="backgr" class="row align-content-center m-4">
+            <form class="px-4" [formGroup]="formulario" (ngSubmit)="onSubmit()">
+                <div>
+                    <h2 class="text-center blue-text mt-5 mb-4">Lo que el alumno a comentado sobre {{ teacher?.name }}
+                    </h2>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-8 mx-auto">
+                                <div class="mb-3">
+                                    <div class="d-flex justify-content-start mb-2">
+                                        <div class="card rounded-5 fondo-gris blue-text p-3 col-sm-7">
+                                            <div class="d-flex align-items-center">
+                                                <div>
+                                                    <img class="img-fluid"
+                                                        src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png"
+                                                        alt="RatingStar" style="max-width: 20px">
+                                                </div>
+                                                <div>
+                                                    <h3 class="mt-3 blue-text ms-3 fs-5 ">{{ rating?.rating }}</h3>
+                                                </div>
+                                            </div>
+                                            <p>{{ rating?.comment_student }}</p>
+                                            <small>{{ rating?.creation_date | date:'dd/MM/yyyy' }}</small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <textarea class="form-control" id="floatingTextarea" placeholder="Comentario (opcional)"
+                    formControlName="textarea"></textarea>
+                <div class="d-flex justify-content-center mt-4">
+                    <input type="submit" class="btn btn-info" value="Puntuar">
+                </div>
+            </form>
+        </div>
+    </section>
 </div>
