--- a/src/app/modules/student/components/student-control-panel/student-control-panel.component.html
+++ b/src/app/modules/student/components/student-control-panel/student-control-panel.component.html
@@ -1,1 +1,24 @@
-<p>student-control-panel works!</p>
+<div [ngClass]="authService.getUserRoleForStyles() + '-main-font-color'">
+
+    <section class="row mx-4 rounded-4 justify-content-between my-4 bg-color_table p-2">
+        <div class="col-3 text-center">
+            <a class="btn btnMenu">All</a>
+        </div>
+        <div class="col-3 text-center">
+            <a class="btn btnMenu">Perfil</a>
+        </div>
+        <div class="col-3 text-center">
+            <a class="btn btnMenu">Clases</a>
+        </div>
+        <div class="col-3 text-center">
+            <a class="btn btnMenu">Alumnos</a>
+        </div>
+    </section>
+
+
+
+
+
+
+
+</div>
