--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,61 +1,24 @@
-<!-- <nav>
-    <ul>
-        <li [routerLink]="['/products']" *ngIf="usersService.isLogged()">Productos</li>
-        <li [routerLink]="['/products', 'new']" *ngIf="usersService.isLogged()">Nuevo Producto</li>
-        <li [routerLink]="['/auth','register']" *ngIf="!usersService.isLogged()">Registro</li>
-        <li [routerLink]="['/auth','login']" *ngIf="!usersService.isLogged()">Login</li>
-        <li (click)="onClickLogout()" *ngIf="usersService.isLogged()">Logout</li>
-    </ul>
-</nav> -->
-<div *ngIf="!booleanPaint">
-  <nav class="navbar navbar-expand-md mt-4 mb-4">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="../../../../assets/logo_student.png" alt="teacher app logo" width="200" height="40">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link text-white" [routerLink]="['']">Inicio</a>
-          <a class="nav-link text-white">Chat</a>
-          <a *ngIf="!user" class="nav-link text-white" [routerLink]="['/users', 'login']">Iniciar Sesión</a>
-          <a *ngIf="!user" class="nav-link text-white" [routerLink]="['/users', 'register']">Registrar</a>
-          <a *ngIf="user" class="nav-link text-white pointer" (click)="onClickLogout()">Cerrar Sesión</a>
-          <!-- TODO ojo esto es solo mientras no hay guards: *ngIf="this.authService.getUserName() !== null -->
-          <a class="nav-link text-white"
-            [routerLink]="['/'+ this.authService.getUserRoleName(), this.authService.getUserId()] "
-            *ngIf="this.authService.getUserName() !== null">{{this.authService.getUserName()}}</a>
-        </div>
+
+<nav class="navbar navbar-expand-md mt-4 mb-4">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img [src]="userTypeLogo()" alt="teacher app logo" width="200" height="40">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ms-auto" [ngClass]="authService.getUserRoleForStyles() + '-nav-font-color'">
+        <a class="btn btn-midblue" [routerLink]="['/home']">Inicio</a>
+        <a class="btn btn-midblue" [routerLink]="['/'+this.authService.getUserRoleName()+'/chat/'+this.authService.getUserId()]" *ngIf="isLogged()">Chat</a>
+        <a class="btn btn-midblue" (click)="onClickLogout()" *ngIf="isLogged()">Cerrar Sesión</a>
+        <a class="btn btn-midblue" [routerLink]="['/users', 'login']" *ngIf="!isLogged()">Iniciar Sesión</a>
+        <a class="btn btn-midblue" [routerLink]="['/users', 'register']" *ngIf="!isLogged()">Registrar</a>
+        <button class="btn btn-orangeyellow"
+          [routerLink]="[this.authService.getUserRoleName()+'/control/', this.authService.getUserId()] "
+          *ngIf="isLogged()">{{this.authService.getUserName()}}</button>
       </div>
     </div>
-  </nav>
-</div>
-<div *ngIf="booleanPaint">
-  <nav class="navbar navbar-expand-md mt-4 mb-4">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="../../../../assets/logo_TeacherAdmin.png" alt="teacher app logo" width="200" height="40">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link blue-text" [routerLink]="['']">Inicio</a>
-          <a class="nav-link blue-text">Chat</a>
-          <a class="nav-link blue-text pointer" (click)="onClickLogout()">Cerrar Sesión</a>
-          <a *ngIf="!user" class="nav-link blue-text" [routerLink]="['/users', 'login']">Iniciar Sesión</a>
-          <a *ngIf="!user" class="nav-link blue-text" [routerLink]="['/users', 'register']">Registrar</a>
-          <!-- TODO ojo esto es solo mientras no hay guards: *ngIf="this.authService.getUserName() !== null -->
-          <a class="nav-link blue-text"
-            [routerLink]="['/'+ this.authService.getUserRoleName(), this.authService.getUserId()] "
-            *ngIf="this.authService.getUserName() !== null">{{this.authService.getUserName()}}</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-</div>
+  </div>
+</nav>
