--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 .student-background {
-    background-color: linear-gradient(180deg, #27187e, #6477d6);
+    background: linear-gradient(180deg, #27187e, #6477d6);
 }
 
 .teacher-background {
