--- a/src/app/modules/teachers/components/search-engine/search-engine.component.css
+++ b/src/app/modules/teachers/components/search-engine/search-engine.component.css
@@ -1,6 +1,13 @@
-.filter {
+.filter {display: none;
     width: 100%;
     margin-bottom: 10px;
+    position: absolute;
+    background-color: rgb(229, 229, 230);
+    color: black;
+    min-width: 260px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 10px;
 }
 
 .filter label {
@@ -10,4 +17,68 @@
 
 .filter input[type="range"] {
     width: 100%;
+}
+
+.dropbtn {
+    background-color: rgb(229, 229, 230);
+    color: rgba(39, 24, 126, 1);
+    padding: 8px;
+    border: none;
+    font-size: 18px;
+    font-family:sans-serif;
+    margin-left: 2px;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .filter {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: rgba(255, 175, 86, 1);
+}
+
+.distancia-button {
+    background-color: rgb(229, 229, 230);
+    border-radius: 4px;
+    color: rgba(39, 24, 126, 1);
+    font-size: 18px;
+    font-family:sans-serif;
+    padding: 10px 15px;
+    margin-left: 5px;
+    cursor: pointer;
+    margin-right: 15px;
+}
+
+.distancia-button:hover {
+    background-color: rgb(229, 229, 230);
 }
