--- a/src/app/modules/teacher/components/teacher-control-panel/teacher-control-panel.component.html
+++ b/src/app/modules/teacher/components/teacher-control-panel/teacher-control-panel.component.html
@@ -15,7 +15,7 @@
 
 <section class="row mx-4">
     <div class="d-flex col-4 justify-content-center ps-0">
-        <button class="btn btn-warning" (click)="cancelClass()">Valoraciones</button>
+        <button class="btn btn-warning" (click)="valoraciones()">Valoraciones</button>
     </div>
     <div class="d-flex col-8 col-xl-4 offset-xl-4 justify-content-end backgr py-2 px-3 rounded-4">
         <div class="me-4">
@@ -61,7 +61,7 @@
                     </div>
                     <div class="my-4">
                         <label for="password" class="form-label">Contraseña</label>
-                        <button class="btn btn-info m-2" (click)="ChangePassword()">Cambiar password</button>
+                        <button class="btn btn-danger m-2" type="button" (click)="ChangePassword()">Cambiar password</button>
                     </div>
                     <div class="my-4">
                         <label for="photo" class="form-label">Imagen de perfil</label>
@@ -159,7 +159,7 @@
                 <th>Nombre</th>
                 <th>Clase</th>
                 <th>Inicio</th>
-                <th>Chat</th>
+                <th>Perfil</th>
             </tr>
             <tr class="border-1 border-black bg-color_table mt-2" *ngFor="let student of students; let i = index">
                 <td><img class="img-fluid w-75 rounded-5" src="{{ student.image }}" alt="StudentImg"></td>
