--- a/src/app/modules/home/components/home/home-components/map-section/map-section.component.css
+++ b/src/app/modules/home/components/home/home-components/map-section/map-section.component.css
@@ -11,10 +11,6 @@
   cursor: pointer;
 }
 
-.student-background {
-  background-color: #F1F2F6;
-}
-
 .student-font {
-  color: #27187E; 
+  color: #F1F2F6;
 }
