--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-md mt-4 mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
       <img [src]="userTypeLogo()" alt="teacher app logo" width="200" height="40">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -10,8 +10,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto" [ngClass]="authService.getUserRoleForStyles() + '-nav-font-color'">
-        <a class="btn btn-midblue" [routerLink]="['/home']">Inicio</a>
-        <a class="btn btn-midblue" [routerLink]="['/'+this.authService.getUserRoleName()+'/chat/'+this.authService.getUserId()]" *ngIf="isLogged()">Chat</a>
+        <a class="btn btn-midblue" [routerLink]="['/home']" *ngIf="authService.getUserRoleForStyles() === 'student'">Inicio</a>
+        <a class="btn btn-midblue" [routerLink]="['/'+this.authService.getUserRoleName()+'/chat/'+this.authService.getUserId()]" *ngIf="isLogged() && authService.getUserRoleForStyles() !== 'admin' ">Chat</a>
         <a class="btn btn-midblue" (click)="onClickLogout()" *ngIf="isLogged()">Cerrar Sesión</a>
         <a class="btn btn-midblue" [routerLink]="['/users', 'login']" *ngIf="!isLogged()">Iniciar Sesión</a>
         <a class="btn btn-midblue" [routerLink]="['/users', 'register']" *ngIf="!isLogged()">Registrar</a>
