--- a/src/app/modules/student/components/student-chat/student-chat.component.html
+++ b/src/app/modules/student/components/student-chat/student-chat.component.html
@@ -1,1 +1,14 @@
-<p>student-chat works!</p>
+<section class="d-flex col-md-8 mx-auto mt-3 card shadow p-3">
+    <section class="row align-items-center">
+        <div class="col-12 col-md-6 p-4 text-center">
+            <figure class="">
+                <img class="img-fluid w-75" src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1470175715831-NUJOMI6VW13ZNT1MI0VB/image-asset.jpeg?format=1500w" alt="Imagen de Pixar">
+            </figure>
+        </div>
+        <div class="col-12 col-md-6 p-4 align-middle">
+            <h3 class="text-uppercase text-center mb-4">Tiempo...</h3>
+            <p class="text-center">...entre los 4 no nos dió</p>
+            <p class="text-center">...pero el BackEnd está preparado para ello!</p>
+        </div>
+    </section>
+</section>
