--- a/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
+++ b/src/app/modules/home/components/home/home-components/map-section/map-section.component.html
@@ -1,4 +1,4 @@
-<div class="row custom-row" *ngIf="myposition">
+<div class="row custom-row" *ngIf="myposition && teachersIsFilled === true">
 
     <section class="col-sm-7" id="teachers-map">
       <google-map *ngIf="teachers && teachers.length" height="30rem" width="auto" [center]="center" [zoom]="zoom">
@@ -23,7 +23,6 @@
 
     <!-- seccion con los teachers del mapa ordenados por puntuación y los sin puntuar por distancia-->
     <section class="col-sm-5 d-flex flex-column" id="teachers-nearby">
-      
       <h3 class="mt-3 mt-sm-0" [ngClass]="authService.getUserRoleForStyles() + '-main-font-color'">Mejor puntuados</h3>
         <div class="overflow-auto scrollable-container flex-fill student-font rounded" *ngIf="!selectedTeacher" [ngClass]="authService.getUserRoleForStyles() + '-background-inverse'">
           <div *ngFor="let teacher of teachers" (click)="selectTeacher(teacher)" class="m-2" [ngClass]="authService.getUserRoleForStyles() + '-main-font-color-inverse'">
@@ -69,6 +68,11 @@
           </div>
         </div>
       </section>
+</div>
+
+<div class="col-sm-12 text-center m-1 p-1 container" *ngIf="teachersIsFilled === false">
+  <h2>Ups...</h2>
+  <h3>Todavía no tenemos profesores registrados en nuestra base de datos</h3>
 </div>
 
 <div class="row custom-row" *ngIf="!myposition">
