--- a/src/app/modules/teacher/components/teacher-rate/teacher-rate.component.html
+++ b/src/app/modules/teacher/components/teacher-rate/teacher-rate.component.html
@@ -29,7 +29,7 @@
         <p class="text-center">Puntuación dada: {{prevRating}}</p>
         <p class="text-center">Comentario: {{prevComment}}</p>
         <div class="d-flex justify-content-center mt-4">
-            <button class="btn btn-info" (click)="returnHome()">Volver al perfil</button>
+            <button class="btn btn-info" (click)="returnHome()">Volver al Home</button>
         </div>
     </div>
 </section>
